# battery-analysis

./: .gitignore  README.md  battery_log.csv  data_extraction.py  pyproject.toml  setup.sh
script/: battery_logger.sh  clean_analysis.sh  purge_data.sh
scripts/: battery_logger.sh  clean_analysis.sh
src/: analysis.py  arguments.py  constants.py  data_extraction.py  main.py
